--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
   client:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - 80:80
     depends_on:
