--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       SECRETE: ${SECRETE}
+      API_ACCESS_KEY: ${API_ACCESS_KEY}
     depends_on:
       db:
         condition: service_healthy
@@ -34,14 +35,23 @@ services:
     volumes:
       - .:/usr/src/app
       
-  client:
+  health-connect:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - "5173:5173"
     depends_on:
-      - backend
-
+      - app
+    environment:
+      - REACT_APP_API_URL=http://app:7000
+    volumes:
+      - ./frontend:/health-connect
+      - /health-connect/node_modules
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5173"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 volumes:
   project-database:
