--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     environment:
       - REACT_APP_API_URL=http://app:7000
     volumes:
-      - ./frontend:/health-connect
+      - .:/health-connect
       - /health-connect/node_modules
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5173"]
