--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,13 +45,10 @@ services:
       - app
     environment:
       - REACT_APP_API_URL=http://app:7000
+      - DOCKER_ENV=true
     volumes:
       - .:/health-connect
       - /health-connect/node_modules
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+
 volumes:
   project-database:
