--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       DB_NAME: ${DB_NAME}
       SECRETE: ${SECRETE}
       API_ACCESS_KEY: ${API_ACCESS_KEY}
-      DOCKER_ENV: 'true'  # Add this line
+      DOCKER_ENV: 'true'
     depends_on:
       db:
         condition: service_healthy
