--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "healthhub",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,10 +17,16 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.12",
     "html5-qrcode": "^2.3.8",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
+    "path": "^0.12.7",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -41,19 +47,25 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/express": "^4.17.21",
     "@types/leaflet": "^1.9.12",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.0.27",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.19",
+    "jest": "^29.7.0",
     "postcss": "^8.4.39",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^5.3.3"
   }
 }
