final edit....files cleanup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,6 +50,6 @@
     "mounts": [
       "source=${localWorkspaceFolder}/backend,target=/usr/src/app,type=bind",
       "source=${localWorkspaceFolder}/frontend,target=/health-connect,type=bind",
-      "source=${localWorkspaceFolder}/mysql/schema.sql,target=/docker-entrypoint-initdb.d/schema.sql,type=bind"
+      "source=${localWorkspaceFolder}/mysql/projectschema.sql,target=/docker-entrypoint-initdb.d/projectschema.sql,type=bind"
     ]
   }
